# pygyw

./: .flake8  .gitignore  CHANGELOG  LICENSE  README.md  example.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: changelog.yml  flake8.yml  pycodestyle.yml  pydocstyle.yml
pygyw/: __init__.py  color.py  deprecated_param.py  exceptions.py
pygyw/bluetooth/: __init__.py  commands.py  device.py  exceptions.py  firmware_version.py  manager.py  settings.py  test.py  test_bluetooth.txt  test_bluetooth_device.py
pygyw/layout/: __init__.py  color.py  displays.py  drawings.py  fonts.py  helpers.py  icons.py  settings.py  test_displays.json  tests.py
