[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygyw"
version = "2.0.0"
requires-python = ">=3.8"
authors = [
    { name = "Get Your Way" },
    { name = "Antoine Malherbe", email = "a.malherbe@getyourway.be" }
]
description = "A Python package to interact with aRdent smart glasses"
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
urls = { Repository = "https://github.com/getyourway/pygyw" }

dependencies = [
    "bleak",
    "typing-extensions",
]

[tool.setuptools]
packages = ["pygyw", "pygyw.bluetooth", "pygyw.layout"]

[tool.setuptools.package-data]
"pygyw.layout" = ["icons/*"]
